--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t dragan1527/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true dragan1527/docker-react npm run test -- --coverage
+  - docker run -e CI=true dragan1527/docker-react npm run test
